--- a/pom.xml
+++ b/pom.xml
@@ -80,11 +80,26 @@
     <artifactId>commons-math3</artifactId>
     <version>3.6.1</version>
 </dependency>
+	<dependency>
+  <groupId>com.twilio.sdk</groupId>
+  <artifactId>twilio</artifactId>
+  <version>7.34.0</version>
+</dependency>
+<dependency>
+    <groupId>javax.validation</groupId>
+    <artifactId>validation-api</artifactId>
+<!--     <version>1.1.0.Final</version> -->
+</dependency>
 <!-- <dependency> -->
 <!--     <groupId>com.fasterxml.jackson.core</groupId> -->
 <!--     <artifactId>jackson-databind</artifactId> -->
 <!--     <version>2.13.0</version> -->
 <!-- </dependency> -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 
 	<build>
