--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-
 spring.servlet.multipart.max-file-size=4MB
 spring.servlet.multipart.max-request-size=4MB
 
@@ -44,6 +43,12 @@ spring.jpa.hibernate.ddl-auto=update
 #multipart.max-file-size: 10000KB
 #spring.servlet.multipart.max-request-size: 10000KB
 # 
+
+#sms
+
+twilio.account.sid=AC097343dd3d3d1a5d65e7c0bda8bdb607
+twilio.auth.token=855cbfcf6bbc243a9d33237f3422757e
+twilio.trial.number=+16195378965
 
 
 
