--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,9 +46,9 @@ spring.jpa.hibernate.ddl-auto=update
 
 #sms
 #
-#twilio.account.sid=AC097343dd3d3d1a5d65e7c0bda8bdb607
-#twilio.auth.token=855cbfcf6bbc243a9d33237f3422757e
-#twilio.trial.number=+16195378965
+twilio.account.sid=AC097343dd3d3d1a5d65e7c0bda8bdb607
+twilio.auth.token=855cbfcf6bbc243a9d33237f3422757e
+twilio.trial.number=+16195378965
 
 
 
