--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,7 +33,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 
 ##server.address=192.168.1.75
-#server.port=8081
+server.port=8081
 #
 #spring.mail.host=smtp.gmail.com
 #spring.mail.port=587
