--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -64,6 +64,12 @@ twilio.trial.number=+16195378965
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.generate-ddl=true
 
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+
+
+
+
+
 
 #spring.jpa.hibernate.ddl-auto=create
 
