--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,7 +39,6 @@ spring.jpa.hibernate.ddl-auto=update
 
 
 ##server.address=192.168.1.75
-server.port=8081
 #
 #spring.mail.host=smtp.gmail.com
 #spring.mail.port=587
@@ -49,6 +48,32 @@ server.port=8081
 #spring.mail.properties.mail.smtp.starttls.enable=true
 #mail.smtp.debug=true
 #
+
+#debug=true
+spring.mail.host=smtp.gmail.com
+#spring.mail.port=25
+spring.mail.port=587
+spring.mail.username=samtetedestup@gmail.com
+spring.mail.password=haouxjsoxlhkbafu
+
+# Other properties
+spring.mail.properties.mail.debug=true
+spring.mail.properties.mail.transport.protocol=smtp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+# TLS , port 587
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+# SSL, post 465
+#spring.mail.properties.mail.smtp.socketFactory.port = 465
+#spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
+
+
+
+
 #multipart.max-file-size: 10000KB
 #spring.servlet.multipart.max-request-size: 10000KB
 # 
@@ -59,16 +84,33 @@ twilio.account.sid=AC097343dd3d3d1a5d65e7c0bda8bdb607
 twilio.auth.token=855cbfcf6bbc243a9d33237f3422757e
 twilio.trial.number=+16195378965
 
+server.port=5000
+
+#spring.datasource.url=jdbc:mysql://pronosql.cqrf2paixkxr.eu-west-3.rds.amazonaws.com:3306/pronosql
+##?useSSL=false
+#spring.datasource.username=pronosql
+#spring.datasource.password=hokutohokuto
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.show-sql=true
+##spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+##spring.jpa.properties.hibernate.dialect.storage_engine=innodb
 
 
-#spring.datasource.url=jdbc:mysql://localhost:3306/turfinfos?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://localhost:3306/turfinfos?useSSL=false
 #spring.datasource.username=root
 #spring.datasource.password=hokutohokuto
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.generate-ddl=true
+##spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+##spring.jpa.properties.hibernate.dialect.storage_engine=innodb
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
+
+
+
 
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
